# LogicSimulator

./: .gitignore  CMakeLists.txt  save_example.json
core/: CMakeLists.txt
core/include/: adjacencylist.h  box.h  signal.h
core/include/gates/: element.h  orgate.h
core/src/: adjacencylist.cpp  box.cpp
core/src/gates/: andgate.cpp  element.cpp  notgate.cpp  orgate.cpp  switch.cpp  xorgate.cpp
graphs/: adjacencylist.cpp  adjacencylist.h  andgate.cpp  andgate.h  box.cpp  box.h  element.cpp  element.h  graphs.pro  igraph.h  main.cpp  notgate.cpp  notgate.h  orgate.cpp  signal.cpp  signal.h  switch.cpp  switch.h  xorgate.cpp  xorgate.h
main/: CMakeLists.txt
main/src/: main.cpp
utils/: CMakeLists.txt
utils/include/: Logger.h
utils/src/: Logger.cpp
